@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.9
 
 	- Documentation updates (STR #2904)
+	- CUPS now reinitializes the DNS resolver on failures
+	  (STR #2920)
 	- The CUPS desktop menu item was broken (STR #2924)
 	- The PPD parser was too strict about missing keyword
 	  values in "relaxed" mode.
